<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/icon"
                android:text="@string/atm"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/close_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_down" />
        </RelativeLayout>

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/all_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/services"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wheelchairService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/wheelchairService"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/blindService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/blindService"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/nfcService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/nfcService"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/qrService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/qrService"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/supportsUsd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/supportsUsd"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/supportsChargeRub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/supportsChargeRub"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/supportsEur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/supportsEur"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/supportsRub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/supportsRub"
                android:textSize="12sp"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_road"
            style="@style/BottomSheetButtonTextStyle"
            android:layout_width="match_parent"
            android:layout_marginBottom="50dp"
            android:text="@string/road" />

    </LinearLayout>
</layout>